# ai-pdf-to-text-converter

./: .gitignore  README.md  convert_pdf.bat  pyproject.toml  requirements.txt
pdf_to_txt_converter/: __init__.py  cli.py  converter.py
tests/: test_converter.py
